# nextjs-fastapi

./: .env.example  .gitignore  CLAUDE.md  MIGRATIONS.md  README.md  alembic.ini  middleware.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: ada1e5ab197b_initial_tables.py
api/: auth.py  database.py  index.py  models.py
app/: globals.css  layout.tsx
app/api/auth/[...all]/: route.ts
app/auth/sign-in/: page.tsx
app/auth/sign-up/: page.tsx
app/components/: user-list.tsx  with-user-list.tsx
app/users/: page.tsx
components/: auth-provider.tsx  header.tsx
lib/: auth-client.ts  auth.ts
